# ServerSide_PYNQ_Raycaster

./: .gitignore  ARCHITECTURE.md  BottleNecks.md  Montior_issues.md  README.md  TODO.md  dev.sh  monitor_map_store.py  pynq_dev.sh  pynq_test_pc.sh  repo_struct.md  sim_dev.sh  sim_dev2.sh  sshec2.sh
archive/: sim_dev.sh
basic/: basicdev.sh  dev.sh
basic/client/: sender.py
basic/protocol/: protocol.py
basic/server/: server.py
basic/sidecar/: sidecar.py
docs/: ARCHITECTURE.md  CONCURRENCY.md  GAME_LOGIC.md  PERFORMANCE.md  PERFORMANCE_AND_DESIGN.md  PROTOCOL.md  RUNNING.md  TODO.md  input_prediction_protocol.md  monitor_ui_performance.md
ec2/: dev.sh
ec2/monitor/: index.html  monitor.py
ec2/server/: server.py  t2_game_tick.py  t4_redis_writer.py
ec2/sidecar/: sidecar.py
interfacing_+_sim/: node_simulator.py
jupyter_side/: launch.py  pynq_client.py  test_package_v2.py  test_package_v2_launch_args.md  test_package_v3.py  test_package_v4.py
lambda/: README.md
monitor_ui/: build.mjs
pynq_full/ec2/game_logic/: CMakeLists.txt  anticheat.cpp  anticheat.h  anticheat.py  core_logic.py  map_loader.cpp  map_loader.h  match_state.py  node_manager.cpp  node_manager.h  protocol.h  raycaster.cpp  state.h
pynq_full/ec2/game_logic/cpp_archive/: TODO.md  anticheat.cpp  anticheat.h  raycaster.h
ref_files/: test_package.py
sidecar/: sidecar.py
tests/: README.md  test_game_logic.py  test_match_modes.py  test_monitor_map_store.py  test_protocol.py  test_pynq_client_tests.py  test_pynq_hardware_contract.py  test_pynq_runtime_fixes.py  test_sim_identity.py
(+70 files in other folders)
